--- a/BeslogicTestApp/src/styles.css
+++ b/BeslogicTestApp/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+h1, h2, h3, h4, h5, h6, p {
+    margin: 0;
+}
+
+.bold {
+    font-weight: bold;
+}
