--- a/BeslogicTestApp/src/app/rentals/rentals.component.css
+++ b/BeslogicTestApp/src/app/rentals/rentals.component.css
@@ -1,1 +1,12 @@
+.add-rental-card {
+    border: 2px rgba(0, 0, 0, 0.175) dashed;
+    color: rgba(0, 0, 0, 0.175);
+    text-align: center;
+}
 
+.add-rental-card:hover {
+    border: 2px rgba(0, 0, 0, 0.35) dashed;
+    color: rgba(0, 0, 0, 0.35);
+    text-align: center;
+    cursor: pointer;
+}
