--- a/BeslogicTestApp/src/app/app.component.html
+++ b/BeslogicTestApp/src/app/app.component.html
@@ -1,3 +1,5 @@
 <nav>Une navigation ici</nav>
 
-<router-outlet></router-outlet>
+<div class="container py-4">
+    <router-outlet></router-outlet>
+</div>
