--- a/BeslogicTestApp/src/app/app.component.html
+++ b/BeslogicTestApp/src/app/app.component.html
@@ -1,4 +1,18 @@
-<nav>Une navigation ici</nav>
+<nav class="navbar navbar-expand-lg py-3 mb-4">
+    <div class="container-fluid">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
+          <a routerLink="/home/" class="navbar-brand nav-link px-4 py-0">
+            <i class="fa-solid fa-igloo"></i>
+          </a>
+          <p>Beslogic Rental Website</p>
+        </div>
+      </div>
+    </div>
+  </nav>
 
 <div class="container py-4">
     <router-outlet></router-outlet>
