--- a/BeslogicTestApp/src/app/rentals/rentals.component.html
+++ b/BeslogicTestApp/src/app/rentals/rentals.component.html
@@ -1,5 +1,5 @@
 <div class="d-flex m-4">
-  <div class="card m-2 add-rental-card d-flex justify-content-center align-items-center p-0" style="width: 18rem;">
+  <div (click)="goToAddRental()" class="card m-2 add-rental-card d-flex justify-content-center align-items-center p-0" style="width: 18rem;">
     <i class="fa-solid fa-plus fa-4x"></i>
   </div>
   
