--- a/BeslogicTestApp/src/app/add-rental/add-rental.component.html
+++ b/BeslogicTestApp/src/app/add-rental/add-rental.component.html
@@ -1,1 +1,58 @@
-<p>add-rental works!</p>
+<div class="container-mw">
+    <h3 class="mb-4">Add a new rental</h3>
+  
+    <!--#addForm="ngForm" (ngSubmit)="onAddVehicle(addForm)"-->
+    <form  class="row g-5">
+            
+      <div class="col-md-6">
+        <label for="body" class="form-label">Title</label>
+        <input ngModel name="title" type="text" class="form-control" id="title">
+      </div>
+      <div class="col-md-6"></div>
+
+      <div class="col-md-6">
+        <label for="Description" class="form-label">Description</label>
+        <textarea ngModel name="description" class="form-control" id="description"></textarea>
+      </div>
+      <div class="col-md-6"></div>
+
+      <div class="col-md-3">
+        <label for="city" class="form-label">City</label>
+        <input ngModel name="city" type="text" class="form-control" id="city">
+      </div>
+      <div class="col-md-3">
+        <label for="country" class="form-label">Country</label>
+        <input ngModel name="country" type="text" class="form-control" id="country">
+      </div>
+      <div class="col-md-6"></div>
+
+      <div class="col-md-3">
+        <label for="price" class="form-label">Price</label>
+        <input ngModel name="price" type="number" class="form-control" id="price" min="0">
+      </div>
+      <div class="col-md-3">
+        <label for="rating" class="form-label">Rating</label>
+        <input ngModel name="rating" type="text" class="form-control" id="rating">
+      </div>
+      <div class="col-md-6"></div>
+
+      <div class="col-md-1">
+        <label for="numberOfGuests" class="form-label">Guests</label>
+        <input ngModel name="numberOfGuests" type="number" class="form-control" id="numberOfGuests" min="1">
+      </div>
+
+      <div class="col-md-1">
+        <label for="numberOfBedrooms" class="form-label">Bedrooms</label>
+        <input ngModel name="numberOfBedrooms" type="number" class="form-control" id="numberOfBedrooms" min="1">
+      </div>
+      <div class="col-md-4">
+        <label for="host" class="form-label">Host</label>
+        <input ngModel name="host" type="text" class="form-control" id="host">
+      </div>
+        
+      <div class="col-12">
+        <button type="submit" class="btn btn-primary">Save</button>
+      </div>
+    </form>
+  </div>
+  
