Add edit and delete buttons

--- a/BeslogicTestApp/src/app/rental-details/rental-details.component.html
+++ b/BeslogicTestApp/src/app/rental-details/rental-details.component.html
@@ -38,8 +38,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="row card-body">
-                    <button class="btn btn-primary col-2 offset-10">Contact Us</button>
+                <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                    <button class="btn btn-success col-2"><i class="fa-solid fa-pen"></i> Edit</button>
+                    <button class="btn btn-danger col-2"><i class="fa-solid fa-xmark"></i> Delete</button>
                 </div>
             </div>
         </div>
