--- a/BeslogicTestApp/src/app/rental-details/rental-details.component.html
+++ b/BeslogicTestApp/src/app/rental-details/rental-details.component.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
                     <button class="btn btn-success col-2"><i class="fa-solid fa-pen"></i> Edit</button>
-                    <button class="btn btn-danger col-2"><i class="fa-solid fa-xmark"></i> Delete</button>
+                    <button (click)="onDeleteRental(rental!.id)" class="btn btn-danger col-2"><i class="fa-solid fa-xmark"></i> Delete</button>
                 </div>
             </div>
         </div>
